--- a/src/HeaderOption.css
+++ b/src/HeaderOption.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
   margin-right: 20px;
   color: gray;
   cursor: pointer;
